--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,21 @@ body {
 /* BODY */
 body {
     height:100%;
-    display: flex;
     text-align: center;
+}
+
+/* GENERAL FORMATTING */
+.line-break {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: none;
+    background-color: gray;
+    height:1px;
+    width:80%;
+}
+
+.title {
+    font-size: 36px;
 }
 
 /* MENU */
@@ -117,8 +130,7 @@ body ol li a {
 
 /* CAROUSEL */
 .main-carousel {
-    margin-top: 100px;
-    position: absolute;
+    margin-top: 10px;
     width: 100%;
     height: 75vh;
     display: flex;
@@ -126,9 +138,8 @@ body ol li a {
 }
 
 .circle-container {
-    position: absolute;
-    bottom: 10px;
-
+    align-self: baseline;
+    bottom: 100px;
 }
 
 .carousel-circle {
@@ -183,6 +194,12 @@ body ol li a {
     font-size: 16px;
     text-align: left;
 }
+
+/* UPCOMING EVENTS */
+.upcoming-events {
+    height: 100%;
+}
+
 
 
 /* FOOTER */
