fix background image issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,12 +155,12 @@ body ol li a {
     margin: 0 auto;
     display: inline-block;
     border-radius: 100%;
-    background-color: rgba(116, 185, 154, 0.5);
+    background-color: rgba(53, 53, 53, 0.5);
     cursor: pointer;
 }
 
 #circle1 {
-    background-color: rgba(116, 185, 154, 1);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .slide {
@@ -175,18 +175,18 @@ body ol li a {
 }
 
 .slide1 {
-    background-image: url("/img/front1.jpg");
+    background-image: url(img/front1.jpg);
     z-index: 1;
 }
 
 .slide2 {
-    background-image: url("/img/front2.jpg");
+    background-image: url(/img/front2.jpg);
     opacity: 1;
     z-index: 0;
 }
 
 .slide3 {
-    background-image: url("/img/front3.jpg");
+    background-image: url(img/front3.jpg);
     opacity: 1;
     z-index: -1;
 }
@@ -214,13 +214,35 @@ body ol li a {
 
 /* UPCOMING EVENTS */
 .upcoming-events {
+    margin: 0 auto;
     height: 100%;
+    width: 90vw;
+    display: flex;
+    position: relative;
+
+}
+
+.up-event-title {
+    width:100%;
+    display: block;
 }
 
 .up-event-photo {
     height:300px;
     width:300px;
 }
+
+
+/* OUR MISSION */
+.mission {
+    margin: 0 auto;
+    height: 100%;
+    width: 90vw;
+    display: flex;
+    position: relative;
+    margin-bottom: 70px;
+}
+
 
 
 
@@ -233,8 +255,6 @@ body ol li a {
     align-content: center;
     justify-content: center;
     height:60px;
-    position: absolute;
-    bottom: 0px;
 }
 
 .footer-text {
