--- a/css/styles.css
+++ b/css/styles.css
@@ -172,23 +172,25 @@ body ol li a {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     display: inline-block;
     position: absolute;
 }
 
 .slide1 {
-    background-image: url("../img/front1.jpg") no-repeat center center fixed; ;
+    background-image: url("../img/front1.jpg");
     z-index: 1;
 }
 
 .slide2 {
-    background-image: url("../img/front2.jpg") no-repeat center center fixed; ;
+    background-image: url("../img/front2.jpg");
     opacity: 1;
     z-index: 0;
 }
 
 .slide3 {
-    background-image: url("../img/front3.jpg") no-repeat center center fixed; ;
+    background-image: url("../img/front3.jpg");
     opacity: 1;
     z-index: -1;
 }
