--- a/css/styles.css
+++ b/css/styles.css
@@ -221,21 +221,42 @@ body ol li a {
     margin: 0 auto;
     height: 100%;
     width: 90vw;
-    display: flex;
     position: relative;
-
 }
 
 .up-event-title {
     width:100%;
-    display: block;
 }
 
 .up-event-photo {
-    height:300px;
-    width:300px;
+    height:250px;
+    width: 250px;
+    border-radius: 20px;
+    background-image: url("../img/front1.jpg");
+    background-position: center;
+    background-size: cover;
+    margin-top: 10px;
+    position: relative;
 }
 
+.up-event-photo-description {
+    position: absolute;
+    bottom: 10px;
+
+}
+
+.up-event-box {
+    width:
+    display: inline;
+}
+
+.up-event-name {
+    text-align: left;
+}
+
+.up-event-description {
+    text-align: left;
+}
 
 /* OUR MISSION */
 .mission {
@@ -245,6 +266,10 @@ body ol li a {
     display: flex;
     position: relative;
     margin-bottom: 70px;
+}
+
+.mission-title {
+    text-align: center;
 }
 
 
