--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ hmtl {
 body {
     margin: 0;
     padding: 0;
+    
 }
 
 /* VARS */
@@ -35,9 +36,9 @@ body {
     margin-top: 30px;
     margin-bottom: 20px;
     border: none;
-    background-color: gray;
-    height:1px;
-    width:70vw;
+    background-color: lightgray;
+    height:2px;
+    width:80vw;
 }
 
 .title {
@@ -71,23 +72,62 @@ body ol {
     display:flex;
     align-items: center;
     margin: 20px;
-    margin-right: 10vw;
-}
-
-.menu-dropdown {
-    display:none;
+    margin-right: 5vw;
 }
 
 body ol li {
     padding-left:20px;
     padding-right:20px;
     display: inline-block;
-    width: 70px;
+    width: 80px;
+}
+
+body ol li:hover {
+    color:var(--mainColor);
+    transition-duration: 500ms;
+}
+
+body ol li a:hover {
+    color:var(--mainColor);
+    transition-duration: 500ms;
 }
 
 body ol li a {
     text-decoration: none;
     color:black;
+}
+
+#western-dropdown {
+    display: none;
+    opacity: 0;
+}
+
+#join-dropdown {
+    display: none;
+    opacity: 0;
+}
+
+#council-dropdown {
+    display: none;
+    opacity: 0;
+}
+
+#admin-dropdown {
+    display: none;
+    opacity: 0;
+}
+
+#store-dropdown {
+    display: none;
+    opacity: 0;
+}
+#coop-dropdown {
+    display: none;
+    opacity: 0;
+}
+#campaign-dropdown {
+    display: none;
+    opacity: 0;
 }
 
 /* MOBILE MENU */
@@ -106,6 +146,22 @@ body ol li a {
 
 .menu-mobile-items {
     display:none;
+}
+
+/*BACKGROUND BLOBS */
+.background-blob1 {
+    right:0px;
+    position: absolute;
+    top: 450px;
+    z-index: -1;
+    width: 30vw;
+}
+
+.background-blob2 {
+    left:0px;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
 
 /* ALERT */
@@ -161,7 +217,7 @@ body ol li a {
 .main-carousel {
     margin-top: 10px;
     width: 100%;
-    height: 75vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     position: relative;
@@ -188,7 +244,7 @@ body ol li a {
 }
 
 .slide {
-    border-radius: 25px;
+    border-radius: 30px;
     margin: 0 auto;
     width: 80vw;
     height: 100%;
@@ -220,7 +276,7 @@ body ol li a {
 }
 
 .slide-text {
-    border-radius: 25px 0px 0px 25px ; 
+    border-radius: 30px 0px 0px 30px ; 
     background-color: rgba(0, 0, 0, 0.3);
     width: 30%;
     height: 100%;
@@ -244,7 +300,7 @@ body ol li a {
 .upcoming-events {
     margin: 0 auto;
     height: 100%;
-    width: 70vw;
+    width: 80vw;
     position: relative;
 }
 
@@ -275,7 +331,7 @@ body ol li a {
 .up-event-box-container {
     margin-top: 10px;
     margin-left: 1vw;
-    width: 49vw;
+    width: 59vw;
     float: right;
     height:20vw;
     overflow-y: scroll;
@@ -287,6 +343,7 @@ body ol li a {
     display: inline-block;
     position:relative;
     height:30%;
+    padding-bottom: 10px;
 }
 
 .up-event-name {
@@ -312,7 +369,7 @@ body ol li a {
     color:white;
     margin: 0 auto;
     height: 100%;
-    width: 70vw;
+    width: 80vw;
     position: relative;
     margin-bottom: 70px;
 }
@@ -348,6 +405,7 @@ body ol li a {
     align-content: center;
     justify-content: center;
     height:60px;
+    bottom:0;
 }
 
 .footer-text {
@@ -380,7 +438,7 @@ body ol li a {
     width:100%;
     height:auto;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .about-title {
