--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,15 @@ hmtl {
 body {
     margin: 0;
     padding: 0;
-    
 }
 
 /* VARS */
 :root {
+    --bodyColor: #fffff2;
     --mainColor: #4F2683;
     --accentColorDark: rgba(153, 120, 173, 0.25);
     --accentColorLight: rgba(116, 185, 154, 0.25);
-    --footerColor: #1b1b1b;
+    --footerColor: #312c2b;
 }
 
 /* BODY */
@@ -27,6 +27,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     position: relative;
+    background-color: var(--bodyColor);
 }
 
 /* MAIN PAGE */
@@ -49,6 +50,7 @@ body {
 /* MENU */
 .menu-container {
     display: flex;
+    margin-bottom: 12px;
 }
 
 body ol {
@@ -73,13 +75,14 @@ body ol {
     align-items: center;
     margin: 20px;
     margin-right: 10vw;
+    z-index: 2;
 }
 
 body ol li {
     padding-left:20px;
     padding-right:20px;
     display: inline-block;
-    width: 75px;
+    width: 80px;
 }
 
 body ol li:hover {
@@ -93,12 +96,12 @@ body ol li a:hover {
 }
 
 body ol li a {
+    font-weight: 600;
     text-decoration: none;
-    color:black;
+    color:rgb(90, 84, 84);
 }
 
 .menu-dropdown {
-    background-color: white;
     border-color: lightgray;
     border-width: 2px;
 }
@@ -190,6 +193,7 @@ body ol li a {
     top:35px;
     left:50%;
     transform: translate(-50%);
+    z-index: 3;
 }
 
 .close {
@@ -199,7 +203,7 @@ body ol li a {
     width: 10px;
     height: 10px;
     opacity: 0.5;
-    z-index: 1;
+    z-index: 3;
 }
 
 .close:hover {
@@ -226,18 +230,19 @@ body ol li a {
 
 /* CAROUSEL */
 .main-carousel {
-    margin-top: 12px;
     width: 100%;
     height: 70vh;
     display: flex;
     justify-content: center;
     position: relative;
+    
 }
 
 .circle-container {
     position: absolute;
     bottom: 20px;
     z-index: 2;
+    
 }
 
 .carousel-circle {
@@ -267,6 +272,7 @@ body ol li a {
     background-repeat: no-repeat;
     display: inline-block;
     position: absolute;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .slide1 {
@@ -286,25 +292,55 @@ body ol li a {
     z-index: -1;
 }
 
-.slide-text {
+.slide-background {
     border-radius: 30px 0px 0px 30px ; 
     background-color: rgba(0, 0, 0, 0.3);
-    width: 30%;
-    height: 100%;
-    color: white;   
+    width: 40%;
+    height:100%;
+    position: relative;
+}
+
+.slide-text {
+    width: 100%;
+    color: white;
+    position: absolute;   
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
 }
 
 .slide-text-title {
-    margin-left:20px;
     font-size: 48px;
     font-weight: 700;
     text-align: left;
 }
 
 .slide-text-description {
-    margin-left:20px;
-    font-size: 16px;
+    font-size: 20px;
     text-align: left;
+}
+
+.cta-button {
+    border-radius: 25px;
+    padding:10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 50px;
+    color:var(--footerColor);
+    text-decoration: none;
+    background-color: var(--mainColor);
+    text-align: center;
+    font-weight: 700;
+    color:white;
+    -webkit-box-shadow: 0px -6px 10px 0px rgba(0,0,0,0.2); 
+    box-shadow: 0px -6px 10px 0px rgba(0,0,0,0.2);
+    transition-duration: 500ms;
+}
+
+.cta-button:hover {
+    transition-duration: 500ms;
+    -webkit-box-shadow: none; 
+    box-shadow: none;
 }
 
 /* UPCOMING EVENTS */
@@ -323,12 +359,13 @@ body ol li a {
     height:20vw;
     width: 20vw;
     border-radius: 20px;
-    background-image: url("../img/front1.jpg");
+    background-image: url("../img/up-coming-event0.jpg");
     background-position: center;
     background-size: cover;
     margin-top: 10px;
     position: relative;
     display: inline-block;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .up-event-photo-description {
@@ -379,10 +416,11 @@ body ol li a {
 .mission {
     color:white;
     margin: 0 auto;
-    height: 100%;
     width: 80vw;
     position: relative;
     margin-bottom: 70px;
+    margin-top:20px;
+    
 }
 
 .mission-title {
@@ -392,19 +430,21 @@ body ol li a {
 }
 
 .mission-description {
+    height:22vh;
     width: 100%;
-    height:12vw;
     display:flex;
     background-color: var(--mainColor);
     border-radius: 20px;
     margin-top: 15px;
     justify-content: center;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .mission-description-text {
     font-size: 18px;
     width:auto;
     align-self: center;
+    padding:20px;
 }
 
 /* FOOTER */
@@ -412,41 +452,56 @@ body ol li a {
     background-color: var(--footerColor);
     width: 100%;
     color:white;
+    position: relative;
     display: flex;
     align-content: center;
     justify-content: center;
-    height:60px;
-    bottom:0;
-    -webkit-box-shadow: 0px -6px 20px 0px rgba(0,0,0,0.27); 
-    box-shadow: 0px -6px 20px 0px rgba(0,0,0,0.27);
+    height: 120px;
+    -webkit-box-shadow: 0px -6px 20px 0px rgba(0,0,0,0.2); 
+    box-shadow: 0px -6px 20px 0px rgba(0,0,0,0.2);
 }
 
 .footer-text {
     position: absolute;
-    padding: 20px;
-    left:0px;
-    height: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height:15px;
+    bottom: 0px;
+    color:lightgray;
+    font-size: 12px;
 }
 
-.footer-other {
+.footer-image {
     position: absolute;
-    align-self: center;
-    text-align: center;
+    font-size: 18px;
+    color:inherit;
+    font-weight: 700;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    text-decoration: none;
+    top:20px;
 }
 
-.footer-other a {
-    color:white;
+.footer-image:hover {
+    transition-duration: 500ms;
+    -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.4));
+    filter: drop-shadow(5px 5px 5px rgba(255,255,255,0.1));
 }
 
 .footer-socials {
     padding: 18px;
     position: absolute;
-    right: 0px;
+    bottom: 18px;
     width: 100px;
 }
 
-/* ABOUT US PAGE */
+.footer-socials a:hover {
+    transition-duration: 500ms;
+    filter: invert(15%) sepia(13%) saturate(372%) hue-rotate(210deg) brightness(97%) contrast(94%);
+}
 
+/* ABOUT US PAGE */
 .about-container {
     width:100%;
     height:auto;
