--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,12 @@ body ol li a {
     -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     cursor: pointer;
+    z-index: 4;
+}
+
+#menu-button:hover {
+    transition-duration: 150ms;
+    transform:scale(1.3);
 }
 
 #menu-button span {
@@ -231,24 +237,30 @@ body ol li a {
     z-index: 3;
     flex-direction: column;
     background-color: var(--bodyColor);
-    -webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.06); 
-    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.06);
 }
 
 .mobile-menu-item {
     width:100%;
     position: relative;
+    cursor: pointer;
+    height:100%;
+    transition-duration: 250ms;
 }
 
 .mobile-menu-item:hover {
-    color:white;
+    background-color: var(--mainColor);
+    transition-duration: 250ms;
 }
 
+.mobile-menu-item:hover .mobile-menu-top-item {
+    color:white;
+    transition-duration: 250ms;
+}
 
 .mobile-menu-dropdown {
     display: none;
     width:100%;
-    background-color: var(--accentColorDark);
+    background-color: var(--footerColor);
     text-align: center;
     position: relative;
     left:50%;
@@ -263,8 +275,18 @@ body ol li a {
 }
 
 .mobile-dropdown-item {
-    transition-duration: 200ms;
+    transition-duration: 250ms;
     width:100%;
+}
+
+.mobile-dropdown-item a {
+    transition-duration: 250ms;
+    color:white;
+}
+
+.mobile-dropdown-item:hover a {
+    transition-duration: 250ms;
+    opacity: 0.5;
 }
 
 
@@ -540,8 +562,7 @@ body ol li a {
     width: 80vw;
     position: relative;
     margin-bottom: 70px;
-    margin-top:20px;
-    
+    margin-top:20px;   
 }
 
 .mission-title {
@@ -551,7 +572,6 @@ body ol li a {
 }
 
 .mission-description {
-    height:22vh;
     width: 100%;
     display:flex;
     background-color: var(--mainColor);
@@ -564,7 +584,7 @@ body ol li a {
     font-size: 18px;
     width:auto;
     align-self: center;
-    padding:20px;
+    padding:5vw;
 }
 
 /* FOOTER */
