--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,8 @@ body ol li a {
     border-color: lightgray;
     border-width: 2px;
     padding:10px;
+    margin-top:10px;
+    margin-bottom: -10px;
     z-index: 3;
     box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.19) inset;
     -webkit-box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.19) inset;
